fix button ios

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -524,6 +524,7 @@ button, input[type=submit]
   box-sizing: border-box;
   cursor: pointer;
   letter-spacing: 2px;
+   -webkit-appearance: none;
 }
 
 button:hover, input[type=submit]:hover
